--- a/index.html
+++ b/index.html
@@ -1,5 +1,160 @@
-<html>
-  <head>
-    HTML FILE
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio: Yukti Verma</title>
+    <style>
+        body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #B0E0E6;
+        }
+
+        header {
+            background-color: #4682B4;
+            color: #fff;
+            text-align: center;
+            padding: 1em 0;
+        }
+
+        nav {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        nav button {
+            background-color: #4682B4;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            margin: 0 10px;
+            cursor: pointer;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            display: none;
+        }
+
+        h1,
+        h2,
+        h3 {
+            color: #333;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .portfolio-item {
+            margin-bottom: 20px;
+        }
+
+        .portfolio-item img {
+            border-radius: 8px;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        footer {
+            background-color: #4682B4;
+            color: #fff;
+            text-align: center;
+            padding: 1em 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <h1>Yukti Verma</h1>
+        <p>Welcome to my portfolio</p>
+    </header>
+
+    <nav>
+        <button onclick="openSection('about')">About Me</button>
+        <button onclick="openSection('skills')">Skills</button>
+        <button onclick="openSection('portfolio')">Portfolio</button>
+        <button onclick="openSection('contact')">Contact</button>
+    </nav>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>
+            My name is Yukti Verma. I am a third-year Computer Science and Engineering student with a strong inclination towards cybersecurity and digital forensics.
+            Proficient in programming languages such as Python, Java, and SQL, my fascination with the world of coding extends to creating solutions that enhance the security and integrity of digital systems. I am committed to staying updated with the latest advancements
+            in the field and always eager to expand my knowledge and contribute to a safer digital environment.
+        </p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ol>
+            <li>Incident Response</li>
+            <li>Digital Forensics</li>
+            <li>Python</li>
+            <li>Linux</li>
+            <li>JAVA</li>
+            <li>SQL</li>
+        </ol>
+    </section>
+
+    <section id="portfolio">
+        <h2>Portfolio</h2>
+        <div class="portfolio-item">
+            <img src="project1.jpg" alt="Project 1">
+            <p>Project 1 Description</p>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="project2.jpg" alt="Project 2">
+            <p>Project 2 Description</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: my.email@example.com</p>
+        <p>LinkedIn: linkedin.com/in/myprofile</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Yukti Verma. All rights reserved.</p>
+    </footer>
+
+    <script>
+        function openSection(sectionId) {
+            // to hide all sections
+            document.querySelectorAll('section').forEach(section => {
+                section.style.display = 'none';
+            });
+
+            // To show the selected section
+            document.getElementById(sectionId).style.display = 'block';
+        }
+    </script>
+
+</body>
+
 </html>
