--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
             bottom: 0;
             width: 100%;
         }
+        
+        @media (max-width: 768px) {
+            nav button {
+                margin: 0 5px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            section {
+                padding: 15px;
+            }
     </style>
 </head>
 
