--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            margin: 0 10px;
+            margin: 0 5px;
             cursor: pointer;
+            display: blobk;
+            width:100%;
         }
 
         section {
@@ -45,9 +47,7 @@
             display: none;
         }
 
-        h1,
-        h2,
-        h3 {
+        h1,h2,h3 {
             color: #333;
         }
 
@@ -64,7 +64,7 @@
             border-radius: 8px;
         }
 
-        ul {
+        ol {
             list-style: none;
             padding: 0;
         }
@@ -93,6 +93,14 @@
             section {
                 padding: 15px;
             }
+        }
+        
+        @media (min-width: 600px) {
+            nav button {
+                width: auto;
+                margin: 0 10px;
+            }
+        }
     </style>
 </head>
 
