--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
     <!-- About Section -->
     <section id="about" class="about">
         <h2>About Me</h2>
-        <img src="your-photo.jpg" alt="Your Photo">
-        <p>abc</p>
+        <p>My name is Yukti Verma. I am a third-year Computer Science and Engineering student with a strong inclination towards cybersecurity and digital forensics.
+            Proficient in programming languages such as Python, Java, and SQL, my fascination with the world of coding extends to creating solutions that enhance the security and integrity of digital systems. I am committed to staying updated with the latest advancements
+            in the field and always eager to expand my knowledge and contribute to a safer digital environment.</p>
     </section>
 
     <section id="skills" class="skills">
