--- a/index.html
+++ b/index.html
@@ -12995,7 +12995,7 @@
                 </div>
             </div>
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="u">
+                <a class="btn btn-xl btn-outline-light" href="assets/YUKTI_VERMA.pdf">
                     <i class="fas fa-download me-2"></i>
                     Download my Resume!
                 </a>
@@ -13046,7 +13046,7 @@
                 <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4"></h4>
                     <p class="lead mb-0">
-                        <a class="btn btn-xl btn-outline-light" href="u">
+                        <a class="btn btn-xl btn-outline-light" href="assets/YUKTI_VERMA.pdf">
                             <i class="fas fa-download me-2"></i>
                             Download my Resume!
                         </a>
